Blog sort filter ready

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
@@ -14,7 +14,7 @@
             <div class="blog-logo">BLOG</div>
             <div class="blog-manipulation">
                 <select name="Sort" class="blog-sort" data-blog-sort>
-                    <option value="No sort">Sort</option>
+                    <option value="No sort" data-sort-no>Sort</option>
                     <option value="Sort A-Z" data-sort-az>A-Z</option>
                     <option value="Sort Z-A" data-sort-za>Z-A</option>
                 </select>
