--- a/homeworks/serhii.kulakivskyi_svkul/3-async/index.html
+++ b/homeworks/serhii.kulakivskyi_svkul/3-async/index.html
@@ -22,7 +22,7 @@
 
       <div class="blog__header-controls controls">
         <div class="controls__sort">
-          <p class="controls__sort-label">Sort by:</p>
+          <p class="controls__sort-label">Sort:</p>
 
           <div class="controls__sort select" data-select='sort'></div>
         </div>
