fix loader -> set time out 3000

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
@@ -32,7 +32,7 @@
                 Debitis eaque esse est! Debitis eaque esse est!</p>
             <div class="trash-bnt">
                 <a href="#" class="trash-btn__link">
-                    <img class="trash-btn__icon" src="Trash-Icon.png" alt="Trash" width="66" height="42">
+                    <img class="trash-btn__icon" src="Trash-Icon.png" alt="Trash" width=66 height=42>
                 </a>
             </div>
         </li>
