3-async/Loader fix

--- a/homeworks/serhii.kulakivskyi_svkul/3-async/index.html
+++ b/homeworks/serhii.kulakivskyi_svkul/3-async/index.html
@@ -32,12 +32,14 @@
     </header>
 
     <section class="blog__news">
-      <main class="blog__news-list" data-posts></main>
-
       <div class="loader" data-loader>
         <svg class="rotate-center" style="width:52px;height:52px" viewBox="0 0 24 24">
           <path fill="currentColor" d="M12,4V2A10,10 0 0,0 2,12H4A8,8 0 0,1 12,4Z" />
         </svg>
+      </div>
+
+      <div class="blog__news-posts-wrapper">
+        <main class="blog__news-list" data-posts></main>
       </div>
     </section>
   </section>
