add attr selected to option, remove redundant data-roles, rewrite code according to changes

--- a/homeworks/kostya.bublyk_ConstBagel/3-async/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/3-async/index.html
@@ -12,13 +12,13 @@
         <h1 class="blog-title">Blog</h1>
         <section class="blog-manage-section">
           <select class="blog-order-select" data-role="blog-select-order">
-            <option data-role="blog-option-order">
+            <option selected>
               Sort
             </option>
-            <option data-role="blog-option-order">
+            <option>
               Sort from A to Z
             </option>
-            <option data-role="blog-option-order">
+            <option>
               Sort from Z to A
             </option>
           </select> 
