--- a/homeworks/andrii.revskyi_RevskyAndrey/3-async/index.html
+++ b/homeworks/andrii.revskyi_RevskyAndrey/3-async/index.html
@@ -6,25 +6,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="page-content">
+<section class="page-content">
     <header class="header">
-        <h1><span class="text_danger">B</span>log </h1>
-        <form class="control_area" data-form>
-            <select data-select>
-                <option value="value1" selected>---</option>
-                <option value="az">Sort from A to Z</option>
+        <h1 class="title">Blog</h1>
+            <div class="control_area">
+            <select class="control_area__select" data-select>
+                <option selected disabled > Sort</option>
+                <option value="az" >Sort from A to Z</option>
                 <option value="za">Sort from Z to A</option>
             </select>
-            <input class="search" name="search">
+            <input class="control_area__search" name="search" data-filter>
 
-        </form>
+        </div>
     </header>
     <main class="main">
-        <div class="chat_area" data-list>
+
+        <div class="preloader" data-preloader>
+        LOADING ...
         </div>
 
+        <div class="news-window" data-list>
+        </div>
     </main>
-</div>
+</section>
 <script src="js/main.js"></script>
 </body>
 </html>
