--- a/homeworks/ivan.bieliaiev_Ckakipaki/3-async/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/3-async/index.html
@@ -12,9 +12,9 @@
             <div class="header__rightSide">
                 <form action="sort" class="rightSide__sort">
                     <select data-sorting size="1" class="sort__section">
-                        <option data-sorting-def selected value="sort">sort</option>
-                        <option data-sorting-AtZ value="A__to__Z">A to Z</option>
-                        <option data-sorting-ZtA value="Z__to__A">Z to A</option>
+                        <option data-sort='default' selected value="sort">sort</option>
+                        <option data-sort='AtoZ' -AtZ value="AtoZ">A to Z</option>
+                        <option data-sort='ZtoA' value="ZtoA">Z to A</option>
                     </select>
                 </form>
                 <input data-filter type="text" name="filter" class="rightSide__filter" placeholder="filter">
