fixed and improved

--- a/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/3-async/index.html
@@ -21,9 +21,10 @@
                     <input type="text" placeholder="Type in some text..." class="actions-container__filter-control"
                         data-post-filter-control>
                 </form>
-                <button class="actions-container__button actions-section__button button button--sort"
-                    data-button-sort>Sort<i class="button__icon fas fa-sort-amount-up-alt"
-                        data-button-sort-icon></i></button>
+                <button class="actions-container__button actions-section__button button button--sort" data-button-sort>
+                    Sort
+                    <i class="button__icon fas fa-sort-amount-up-alt" data-button-sort-icon></i>
+                </button>
             </div>
         </header>
         <main class="posts-section" data-posts-section>
@@ -40,7 +41,7 @@
             </article>
         </template>
         <template data-loader-template>
-            <div class="loader display-none" data-loader></div>
+            <div class="loader" data-loader></div>
         </template>
         <template data-notification-message-template>
             <article class="posts-section__element post notificaton-message display-none" data-notification-message>
