--- a/homeworks/roman.buzukov_BuzRom/3-async/index.html
+++ b/homeworks/roman.buzukov_BuzRom/3-async/index.html
@@ -32,9 +32,9 @@
                <li class="content__list-item post" data-post>
                   <h2 class="post__title" data-title></h2>
                   <p class="post__body" data-body></p>
-                  <button class="post__delete">
-                     <svg class="post__delete-img" data-delete enable-background="new 0 0 32 32" version="1.1"
-                        viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                  <button class="post__delete" data-delete>
+                     <svg class="post__delete-img" enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32"
+                        xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <path d="  M25,10H7v17c0,1.105,0.895,2,2,2h14c1.105,0,2-0.895,2-2V10z" fill="none"
                            id="XMLID_129_" stroke="#000000" stroke-linecap="round" stroke-linejoin="round"
