--- a/homeworks/ivan.bieliaiev_Ckakipaki/3-async/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/3-async/index.html
@@ -13,7 +13,7 @@
                 <form action="sort" class="rightSide__sort">
                     <select data-sorting size="1" class="sort__section">
                         <option data-sort='default' selected value="sort">sort</option>
-                        <option data-sort='AtoZ' -AtZ value="AtoZ">A to Z</option>
+                        <option data-sort='AtoZ' value="AtoZ">A to Z</option>
                         <option data-sort='ZtoA' value="ZtoA">Z to A</option>
                     </select>
                 </form>
