--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/3-async/html/index.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/3-async/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>3-async</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
