3-async-first-fixed

--- a/homeworks/maksym.selenkov_MaksymSelenkov/3-async/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/3-async/index.html
@@ -27,10 +27,12 @@
                 <input type="text" class="blog__header-filter" data-filter>
             </header>
             <section class="blog__content" data-content>
-<!--                <template class="blog__content-post" data-post>-->
-<!--                    <h2 class="blog__content-post-title" data-title></h2>-->
-<!--                    <p class="blog__content-post-text" data-text></p>-->
-<!--                </template>-->
+                <template  data-post>
+                        <div class="blog__content-post">
+                        <h2 class="blog__content-post-title" data-title></h2>
+                        <p class="blog__content-post-text" data-text></p>
+                        </div>
+                </template>
             </section>
         </main>
     </div>
