--- a/homeworks/nikolay.krasniuk_Kingstar22/3-async/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/3-async/index.html
@@ -19,12 +19,12 @@
                 <div class="blog__select" date-sort-select>
                     <button class="blog__select-sort" date-sort-posts>Sort </button>
                     <div class="blog__select-list" date-select-list>
-                        <div class="blog__select-item" data-value="0">Default </div>
+                        <div class="blog__select-item" data-value="">Default </div>
                         <div class="blog__select-item" data-value="1">A-Z </div>
                         <div class="blog__select-item" data-value="2">Z-A </div>
                     </div>
                 </div>
-                <input type="text" name="filter" placeholder="Filter" class="blog__filter-search">
+                <input type="text" name="filter" placeholder="Filter" class="blog__filter-search" data-filter-posts>
             </nav>
         </header>
         <main class="blog__content" data-publication-block>
