изменены асинхронные функции, изменен select, добавлена форма

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
@@ -9,14 +9,15 @@
     <header class="blog_filter">
         <div class="blog_filter-blog">БЛОГ</div>
         <div class="blog_filter-filter">
+        <form>
         <select data-sort>
-            <option selected value="0"></option>
+            <option selected value="0">Sort</option>
             <option value="1">None Sorted</option>
             <option value="2">A-Z</option>
             <option value="3">Z-A</option>
         </select>
-    <button data-btn>Sort</button>
     <input type="text" placeholder="filter" data-input-filter>
+        </form>
         </div>
     </header>
     <main class="blog_container" data-blog-container>
