class name changed and fixed CSS

--- a/homeworks/andrii.kholodenko_AndriiCold/3-async/index.html
+++ b/homeworks/andrii.kholodenko_AndriiCold/3-async/index.html
@@ -12,13 +12,13 @@
     <header CLASS="main_header">
         <img src="img/logo.svg" alt="blog logo" class="logo_img">
         <div class="main_header_bar">
-            <div class="main_header_bar_form">
-                <select form name="sort" class="main_header_bar_sorting" data-sort>
+            <div class="main_form">
+                <select form name="sort" class="main_sorting" data-sort>
                     <option value="Sort">Sort</option>
                     <option value="A-z">A-z</option>
                     <option value="Z-a">Z-a</option>
                 </select>
-                <input type="text" class="main_header_bar_filter" placeholder="Filter" data-filter>
+                <input type="text" class="main_filter" placeholder="Filter" data-filter>
             </div>
         </div>
     </header>
