--- a/homeworks/roman.kushnirenko_skyprog/3-async/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/3-async/index.html
@@ -16,9 +16,9 @@
             <div class="header__icon">BLOG</div>
             <div class="header__inputs">
                 <select class="header__sort" data-sort name="sort">
-                    <option value="sort_default" selected>Sort</option>
-                    <option value="sort_a-z">A - z</option>
-                    <option value="sort_z-a">z - A</option>
+                    <option value="default" selected>Sort</option>
+                    <option value="a-z">A - z</option>
+                    <option value="z-a">z - A</option>
                 </select>
                 <input type="search" class="header__filter" data-header-filter placeholder="Filter" value="">
             </div>
@@ -33,9 +33,10 @@
         <template data-content-template>
             <article class="content__article" data-article>
                 <h1 class="article__title" data-article-title></h1>
-                <p class="article__text" data-article-text></p>
-                <button class="article__remove--btn" data-remove-btn><img
-                        src="https://s3-alpha-sig.figma.com/img/fc79/dbc8/ca892b8f222e7476d95cb5283a69c996?Expires=1636934400&Signature=cTVmUN4AgRrht4QMeE-vSae86ZGZ4~ylPwKiS~YrYSI~~3VFdBMS8EUK3pcSjPDh70fChEc2cJq~65rUNC5hL0tffu0K8WhBRtzj3lwa-ZAgvJcVQrntK7JUplKsGyPxf0ES4fs3QUCJI2LUy4pc3h6dzB2qDyr6qjIGUfJMZB6JQMLDXivjcEbZqjFdAcMosKV4KRb4ByJ7zRLy-TLGviD5tquK1JsgUtUXd6hbAn5Urdk~DBogfHbfs7X4V4v7YO3ayvZ8FpJGxAin48UhWmj1iuNzywhQXfDEzeDqCBqmsvZMFq4KFwjAsuh-hEX-yHKZikh3XcO2BQlaqcoGEA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA" /></button>
+                    <p class="article__text" data-article-text></p>
+                <button class="article__removebtn" data-remove-btn>
+                    <img class="img_remove" src="https://s3-alpha-sig.figma.com/img/fc79/dbc8/ca892b8f222e7476d95cb5283a69c996?Expires=1636934400&Signature=cTVmUN4AgRrht4QMeE-vSae86ZGZ4~ylPwKiS~YrYSI~~3VFdBMS8EUK3pcSjPDh70fChEc2cJq~65rUNC5hL0tffu0K8WhBRtzj3lwa-ZAgvJcVQrntK7JUplKsGyPxf0ES4fs3QUCJI2LUy4pc3h6dzB2qDyr6qjIGUfJMZB6JQMLDXivjcEbZqjFdAcMosKV4KRb4ByJ7zRLy-TLGviD5tquK1JsgUtUXd6hbAn5Urdk~DBogfHbfs7X4V4v7YO3ayvZ8FpJGxAin48UhWmj1iuNzywhQXfDEzeDqCBqmsvZMFq4KFwjAsuh-hEX-yHKZikh3XcO2BQlaqcoGEA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"/>
+                </button>
             </article>
         </template>
 
