remove-window-load-add-defer

--- a/homeworks/maksym.selenkov_MaksymSelenkov/3-async/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/3-async/index.html
@@ -36,6 +36,6 @@
             </section>
         </main>
     </div>
-<script src="app.js"></script>
+<script defer src="app.js"></script>
 </body>
 </html>
