Add html linter

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/2 - DOM/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>MyFirstChat</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1 class="main__title">Мой первый чат</h1>
-    </header>
-    <main>
-        <div class="chat__body" data-chat-field>
-            <template data-chat-field-element>
-                <div class="chat__message" data-message>Hello world</div>
-            </template>
-        </div>
-        <form data-input-message>
-            <input type="text" data-input-message placeholder="Type Your Message">
-            <button type="submit">Send</button>
-        </form>
-    </main>
-    <script src="script.js"></script>
-</body>
+<html lang="en">
+    <head>
+        <title>MyFirstChat</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h1 class="main__title">Мой первый чат</h1>
+        </header>
+        <main>
+            <div class="chat__body" data-chat-field>
+                <template data-chat-field-element>
+                    <div class="chat__message" data-message>Hello world</div>
+                </template>
+            </div>
+            <form data-input-message>
+                <input type="text" data-input-message placeholder="Type Your Message">
+                <button type="submit">Send</button>
+            </form>
+        </main>
+        <script src="script.js"></script>
+    </body>
 </html>
