--- a/homeworks/andrii.tkachenko_Hodr1337/2-dom/index.html
+++ b/homeworks/andrii.tkachenko_Hodr1337/2-dom/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-  <main>
-    <header>
-      <h1>Chat History</h1>
-    </header>
-  
-    <section data-chat class="chat">
-      <div id="str"></div>
-    </section>
-  
-    <section>
-      <input id="textArea" type="text" placeholder="Write your text" required/>
-      <button id="but">Send</button>
-    </section>
-  </main>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <main>
+            <header>
+                <h1>Chat History</h1>
+            </header>
 
-<script src="index1.js"></script>
-</body>
+            <section data-chat class="chat">
+                <div id="str"></div>
+            </section>
+
+            <section>
+                <input id="textArea" type="text" placeholder="Write your text" required>
+                <button id="but" type="button">Send</button>
+            </section>
+        </main>
+
+        <script src="index1.js"></script>
+    </body>
 </html>
