--- a/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/2-dom/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
 
-<body>
-    <div class="chat">
-        <div class="chat__messeges">
-            <div class="messege__item mes__item1">
-                <p class="item__text">
-                    Hello
-                </p>
-                <button class="item__delete item__del1">&#9746</button>
+    <body>
+        <div class="chat">
+            <div class="chat__messeges">
+                <div class="messege__item mes__item1">
+                    <p class="item__text">
+                        Hello
+                    </p>
+                    <button class="item__delete item__del1" type="button">&#9746</button>
+                </div>
+                <div class="messege__item mes__item2">
+                    <p class="item__text">
+                        How are you?
+                    </p>
+                    <button class="item__delete item__del1" type="button">&#9746</button>
+                </div>
             </div>
-            <div class="messege__item mes__item2">
-                <p class="item__text">
-                    How are you?
-                </p>
-                <button class="item__delete item__del1">&#9746</button>
+            <div class="chat__input">
+                <textarea cols="20" rows="4" class="input__text"></textarea>
+                <button class="input__button" type="button">Send</button>
             </div>
         </div>
-        <div class="chat__input">
-            <textarea cols="20" rows="4" class="input__text"></textarea>
-            <button class="input__button">Send</button>
-        </div>
-    </div>
-    <script src="index.js"></script>
-</body>
+        <script src="index.js"></script>
+    </body>
 
 </html>
