--- a/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/2-dom/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <main class="basis">
-        <div class="messages" data-info="chat-out-message">
-        </div>
-        <form class="block-send" data-form="chat-control">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <main class="basis">
+            <div class="messages" data-info="chat-out-message">
+            </div>
+            <form class="block-send" data-form="chat-control">
                 <input class="input-message" type="text" data-info="chat-input-message" placeholder="Massage">
-                <button class="btn-send" type="button" data-rule="button-click"><strong>Send</strong></button>
-        </form>
+                <button class="btn-send" type="button" data-rule="button-click">
+                    <strong>Send</strong>
+                </button>
+            </form>
         
-    </main>
-    <script src="script.js"></script>
-</body>
+        </main>
+        <script src="script.js"></script>
+    </body>
 </html>
