--- a/homeworks/kostya.bublyk_ConstBagel/3-async/index.html
+++ b/homeworks/kostya.bublyk_ConstBagel/3-async/index.html
@@ -1,33 +1,33 @@
 <!doctype html>
 
-<html>
-  <head>
-     <title>Blog</title>
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
+<html lang="en">
+    <head>
+        <title>Blog</title>
+        <link rel="stylesheet" href="styles/style.css">
+    </head>
 
-  <body>
-    <div class="blog-wrapper">
-      <header class="blog-header">
-        <h1 class="blog-title">Blog</h1>
-        <section class="blog-manage-section">
-          <select class="blog-order-select" data-role="blog-select-order">
-            <option selected>
-              Sort
-            </option>
-            <option>
-              Sort from A to Z
-            </option>
-            <option>
-              Sort from Z to A
-            </option>
-          </select> 
-          <input class="blog-search-input" data-role="blog-input-search" type="text" placeholder="Filter"/>
-        </section>
-      </header>
-      <main class="main-section" data-role="blog-main-section">
-      </main>
-    </div>
-    <script src="scripts/script.js"></script>
-  </body>
+    <body>
+        <div class="blog-wrapper">
+            <header class="blog-header">
+                <h1 class="blog-title">Blog</h1>
+                <section class="blog-manage-section">
+                    <select class="blog-order-select" data-role="blog-select-order">
+                        <option selected>
+                            Sort
+                        </option>
+                        <option>
+                            Sort from A to Z
+                        </option>
+                        <option>
+                            Sort from Z to A
+                        </option>
+                    </select>
+                    <input class="blog-search-input" data-role="blog-input-search" type="text" placeholder="Filter">
+                </section>
+            </header>
+            <main class="main-section" data-role="blog-main-section">
+            </main>
+        </div>
+        <script src="scripts/script.js"></script>
+    </body>
 </html>
