--- a/homeworks/nikolay.krasniuk_Kingstar22/2-dom/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/2-dom/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2-dom</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <section class="chat">
-        <div class="chat__main">
-            <div data-message class="chat__message">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>2-dom</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <section class="chat">
+            <div class="chat__main">
+                <div data-message class="chat__message">
 
+                </div>
+                <form action="#" method="post" class="chat_form">
+                    <textarea class="chat__entry-textarea" data-textarea type="text" placeholder="Type something here..."></textarea>
+                    <button data-btn class="chat__entry-btn" type="submit">Send</button>
+                </form>
             </div>
-            <form action="#" method="post" class="chat_form">
-                <textarea class="chat__entry-textarea" data-textarea  type="text" placeholder="Type something here..." ></textarea>
-                <button data-btn class="chat__entry-btn" type="submit">Send</button>
-            </form>
-        </div>
-    </section>
-    <template data-template>
-        <div class="template__new-message" data-new-message>
-            <p class="template__message-text"  data-message-text></p>
-            <button class="template__delete-btn" data-delete-btn>X</button>
-        </div>
-    </template>
-    <script src="script.js"></script>
-</body>
+        </section>
+        <template data-template>
+            <div class="template__new-message" data-new-message>
+                <p class="template__message-text" data-message-text></p>
+                <button class="template__delete-btn" data-delete-btn type="button">X</button>
+            </div>
+        </template>
+        <script src="script.js"></script>
+    </body>
 </html>
