--- a/homeworks/vladyslav.kovalov_kovalov/2-dom/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/2-dom/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script
             src="https://kit.fontawesome.com/a99b8e16e5.js"
             crossorigin="anonymous"
         ></script>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles.css">
         <title>Simple chat app</title>
     </head>
     <body>
@@ -19,11 +19,11 @@
                     <template data-chat-template>
                         <span class="message" data-dialogue-message>
                             <span class="message__text"
-                            data-message-text></span>
-                            <button class="message__button" data-messsage-button>
-                                <i class="message__icon fas fa-times" data-message-button-icon aria-hidden="true">
-                                </i></button>
-                            </span>
+                                data-message-text></span>
+                            <button class="message__button" data-messsage-button type="button">
+                                <i class="message__icon fas fa-times" data-message-button-icon aria-hidden="true"></i>
+                            </button>
+                        </span>
                     </template>
                 </div>
                 <div class="chat__footer">
@@ -33,10 +33,11 @@
                             class="message-form__input"
                             placeholder="Type your message..."
                             data-message-input
-                        />
+                        >
                         <button
                             class="message-form__button"
                             data-message-submit
+                            type="submit"
                         >
                             <i
                                 class="
@@ -48,7 +49,7 @@
                         </button>
                     </form>
                 </div>
-                <button class="chat__button button--clear" data-clear>
+                <button class="chat__button button--clear" data-clear type="button">
                     Clear messages
                 </button>
             </div>
