Fixed cycle from FOR to FOREACH and other

--- a/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/3-async/index.html
@@ -26,10 +26,10 @@
         </main>
     </section>
     <template class="blog__post_sample" data-template-blok>
-        <ol class="blog__msg">
+        <li class="blog__msg">
             <h2 class="post__title" data-post-title></h2>
             <p class="post__body" data-post-body></p>
-        </ol>
+        </li>
     </template>
     <script src="script.js"></script>
 </body>
