fixed mentor's comment (second part)

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
@@ -28,10 +28,10 @@
                     <h2 class="post-list__item-title" data-post-title>Title</h2>
                     <p class="post-list__item-text" data-post-text>Lorem ipsum dolor sit amet.</p>
                     <div class="trash-bnt" data-post-trash-bnt>
-                        <a href="#" class="trash-btn__link" data-post-trash-bnt-link>
+                        <button class="trash-btn__link" data-post-trash-bnt-link>
                             <img class="trash-btn__icon" src="Trash-Icon.png" alt="Trash" data-post-trash-bnt-icon
                                  width=66 height=42>
-                        </a>
+                        </button>
                     </div>
                 </li>
             </template>
