mentor fix style of code
quotes in attribute values

Co-authored-by: Taras Turchenko <tarasturchenko1551@gmail.com>

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/3-async/index.html
@@ -30,7 +30,7 @@
                     <div class="trash-bnt" data-post-trash-bnt>
                         <button class="trash-btn__link" data-post-trash-bnt-link>
                             <img class="trash-btn__icon" src="Trash-Icon.png" alt="Trash" data-post-trash-bnt-icon
-                                 width=66 height=42>
+                                 width="66px" height="42px">
                         </button>
                     </div>
                 </li>
