--- a/homeworks/roman.kushnirenko_skyprog/3-async/index.html
+++ b/homeworks/roman.kushnirenko_skyprog/3-async/index.html
@@ -34,9 +34,7 @@
             <article class="content__article" data-article>
                 <h1 class="article__title" data-article-title></h1>
                     <p class="article__text" data-article-text></p>
-                <button class="article__removebtn" data-remove-btn>
-                    <img class="img_remove" src="https://s3-alpha-sig.figma.com/img/fc79/dbc8/ca892b8f222e7476d95cb5283a69c996?Expires=1636934400&Signature=cTVmUN4AgRrht4QMeE-vSae86ZGZ4~ylPwKiS~YrYSI~~3VFdBMS8EUK3pcSjPDh70fChEc2cJq~65rUNC5hL0tffu0K8WhBRtzj3lwa-ZAgvJcVQrntK7JUplKsGyPxf0ES4fs3QUCJI2LUy4pc3h6dzB2qDyr6qjIGUfJMZB6JQMLDXivjcEbZqjFdAcMosKV4KRb4ByJ7zRLy-TLGviD5tquK1JsgUtUXd6hbAn5Urdk~DBogfHbfs7X4V4v7YO3ayvZ8FpJGxAin48UhWmj1iuNzywhQXfDEzeDqCBqmsvZMFq4KFwjAsuh-hEX-yHKZikh3XcO2BQlaqcoGEA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"/>
-                </button>
+                <button class="article__removebtn" data-remove-btn><img class="removebtn__img" src="https://s3-alpha-sig.figma.com/img/fc79/dbc8/ca892b8f222e7476d95cb5283a69c996?Expires=1636934400&Signature=cTVmUN4AgRrht4QMeE-vSae86ZGZ4~ylPwKiS~YrYSI~~3VFdBMS8EUK3pcSjPDh70fChEc2cJq~65rUNC5hL0tffu0K8WhBRtzj3lwa-ZAgvJcVQrntK7JUplKsGyPxf0ES4fs3QUCJI2LUy4pc3h6dzB2qDyr6qjIGUfJMZB6JQMLDXivjcEbZqjFdAcMosKV4KRb4ByJ7zRLy-TLGviD5tquK1JsgUtUXd6hbAn5Urdk~DBogfHbfs7X4V4v7YO3ayvZ8FpJGxAin48UhWmj1iuNzywhQXfDEzeDqCBqmsvZMFq4KFwjAsuh-hEX-yHKZikh3XcO2BQlaqcoGEA__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA"/></button>
             </article>
         </template>
 
